--- a/OpenAuth.Mvc/Web.config
+++ b/OpenAuth.Mvc/Web.config
@@ -14,7 +14,7 @@
   </configSections>
 
   <connectionStrings>
-    <add name="OpenAuthDBContext" connectionString="Data Source=localhost\sqlexpress;Initial Catalog=OpenAuthDB;Persist Security Info=True;User ID=sa;Password=123456;MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
+    <add name="OpenAuthDBContext" connectionString="Data Source=localhost;Initial Catalog=OpenAuthDB;Persist Security Info=True;User ID=sa;Password=123456;MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
 
     <!--工作流数据库-->
     <!--<add name="OpenAuthDBContext" connectionString="server=127.0.0.1;user id=root;persistsecurityinfo=True;database=openauth;password=123456" providerName="MySql.Data.MySqlClient" />-->
