--- a/OpenAuth.Mvc/OpenAuth.Mvc.csproj
+++ b/OpenAuth.Mvc/OpenAuth.Mvc.csproj
@@ -181,6 +181,7 @@
   <ItemGroup>
     <Content Include="BllScripts\assignModule.js" />
     <Content Include="BllScripts\assignModuleElement.js" />
+    <Content Include="BllScripts\Business\user_register.js" />
     <Content Include="BllScripts\categoryManager.js" />
     <Content Include="BllScripts\customermanager.js" />
     <Content Include="BllScripts\formDesign.js" />
@@ -201,7 +202,6 @@
     <Content Include="BllScripts\stockManager.js" />
     <Content Include="BllScripts\usermanager.js" />
     <Content Include="BllScripts\assignRes.js" />
-    <Content Include="BllScripts\userRegister..js" />
     <Content Include="BllScripts\userRoleManager.js" />
     <Content Include="Content\ace\avatars\avatar.png" />
     <Content Include="Content\ace\avatars\avatar1.png" />
@@ -1208,7 +1208,7 @@
     <Content Include="Views\Shared\_LayoutNoHeader.cshtml" />
     <Content Include="Views\Shared\_FlowForm.cshtml" />
     <Content Include="Views\Shared\_Form.cshtml" />
-    <Content Include="Views\UserManager\UserRegister.cshtml" />
+    <Content Include="Views\Login\UserRegister.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
