订单新增实体类

--- a/OpenAuth.Domain/OpenAuth.Domain.csproj
+++ b/OpenAuth.Domain/OpenAuth.Domain.csproj
@@ -43,6 +43,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Business\Customer.cs" />
+    <Compile Include="Business\OrderDetail.cs" />
+    <Compile Include="Business\OrderHeader.cs" />
     <Compile Include="Core\Category.cs" />
     <Compile Include="Core\CustomerInfo.cs" />
     <Compile Include="Core\UserExt.cs" />
