20170514-订单审核-初版

--- a/OpenAuth.Mvc/OpenAuth.Mvc.csproj
+++ b/OpenAuth.Mvc/OpenAuth.Mvc.csproj
@@ -184,6 +184,7 @@
     <Content Include="BllScripts\assignModule.js" />
     <Content Include="BllScripts\assignModuleElement.js" />
     <Content Include="BllScripts\Business\layer_validator.js" />
+    <Content Include="BllScripts\Business\order_approve.js" />
     <Content Include="BllScripts\Business\order_catch.js" />
     <Content Include="BllScripts\Business\user_register.js" />
     <Content Include="BllScripts\categoryManager.js" />
@@ -1217,6 +1218,7 @@
     <Content Include="Views\Shared\_Form.cshtml" />
     <Content Include="Views\Login\UserRegister.cshtml" />
     <Content Include="Views\OrderManager\OrderCatch.cshtml" />
+    <Content Include="Views\OrderManager\OrderApprove.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
