--- a/OpenAuth.Mvc/Web.config
+++ b/OpenAuth.Mvc/Web.config
@@ -14,8 +14,8 @@
   </configSections>
 
   <connectionStrings>
-    <!--<add name="OpenAuthDBContext" connectionString="Data Source=localhost\SQLEXPRESS;Initial Catalog=OpenAuthDB;Persist Security Info=True;User ID=sa;Password=123456;MultipleActiveResultSets=True" providerName="System.Data.SqlClient" /> -->
-<add name="OpenAuthDBContext" connectionString="Data Source=rm-wz9hoo74b3dun442wo.sqlserver.rds.aliyuncs.com,3433;Initial Catalog=dkwdb;Persist Security Info=True;User ID=dkwdb;Password=Dkwdb2017;MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
+    <add name="OpenAuthDBContext" connectionString="Data Source=localhost\SQLEXPRESS;Initial Catalog=OpenAuthDB;Persist Security Info=True;User ID=sa;Password=123456;MultipleActiveResultSets=True" providerName="System.Data.SqlClient" /> 
+    <!-- <add name="OpenAuthDBContext" connectionString="Data Source=rm-wz9hoo74b3dun442wo.sqlserver.rds.aliyuncs.com,3433;Initial Catalog=dkwdb;Persist Security Info=True;User ID=dkwdb;Password=Dkwdb2017;MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />-->
     <!--工作流数据库-->
     <!--<add name="OpenAuthDBContext" connectionString="server=127.0.0.1;user id=root;persistsecurityinfo=True;database=openauth;password=123456" providerName="MySql.Data.MySqlClient" />-->
   </connectionStrings>
@@ -130,4 +130,18 @@
       <remove invariant="MySql.Data.MySqlClient" />
       <add name="MySQL Data Provider" invariant="MySql.Data.MySqlClient" description=".Net Framework Data Provider for MySQL" type="MySql.Data.MySqlClient.MySqlClientFactory, MySql.Data, Version=6.9.8.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d" />
     </DbProviderFactories>
-  </system.data></configuration>
+  </system.data>
+  <system.serviceModel>
+    <bindings>
+      <basicHttpBinding>
+        <binding name="Soap57ProviderBinding" />
+        <binding name="ISoap57Binding" />
+      </basicHttpBinding>
+    </bindings>
+    <client>
+      <endpoint address="http://www.smswang.net:7801/sms" binding="basicHttpBinding"
+          bindingConfiguration="Soap57ProviderBinding" contract="ServiceReference1.Soap57ProviderPortType"
+          name="Soap57ProviderPort" />
+    </client>
+  </system.serviceModel>
+</configuration>
