--- a/OpenAuth.WebApi/Web.config
+++ b/OpenAuth.WebApi/Web.config
@@ -15,8 +15,8 @@
   </configSections>
   
   <connectionStrings>
-    <!-- <add name="OpenAuthDBContext" connectionString="Data Source=localhost\SQLEXPRESS;Initial Catalog=OpenAuthDB;Persist Security Info=True;User ID=sa;Password=123456;MultipleActiveResultSets=True" providerName="System.Data.SqlClient" /> -->
-    <add name="OpenAuthDBContext" connectionString="Data Source=rm-wz9hoo74b3dun442wo.sqlserver.rds.aliyuncs.com,3433;Initial Catalog=dkwdb;Persist Security Info=True;User ID=dkwdb;Password=Dkwdb2017;MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
+    <add name="OpenAuthDBContext" connectionString="Data Source=localhost\SQLEXPRESS;Initial Catalog=OpenAuthDB;Persist Security Info=True;User ID=sa;Password=123456;MultipleActiveResultSets=True" providerName="System.Data.SqlClient" /> 
+    <!-- <add name="OpenAuthDBContext" connectionString="Data Source=rm-wz9hoo74b3dun442wo.sqlserver.rds.aliyuncs.com,3433;Initial Catalog=dkwdb;Persist Security Info=True;User ID=dkwdb;Password=Dkwdb2017;MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />-->
   </connectionStrings>
 
   <enyim.com>
