added footer on page Login and MainPage

--- a/OpenAuth.Mvc/Web.config
+++ b/OpenAuth.Mvc/Web.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <!--
   有关如何配置 ASP.NET 应用程序的详细信息，请访问
   http://go.microsoft.com/fwlink/?LinkId=301880
@@ -85,7 +85,18 @@
       <remove name="OPTIONSVerbHandler" />
       <remove name="TRACEVerbHandler" />
       <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
-    </handlers></system.webServer>
+    </handlers>
+        <defaultDocument>
+            <files>
+                <clear />
+                <add value="index.html" />
+                <add value="index.htm" />
+                <add value="Default.htm" />
+                <add value="Default.asp" />
+                <add value="iisstart.htm" />
+                <add value="default.aspx" />
+            </files>
+        </defaultDocument></system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
@@ -139,9 +150,7 @@
       </basicHttpBinding>
     </bindings>
     <client>
-      <endpoint address="http://www.smswang.net:7801/sms" binding="basicHttpBinding"
-          bindingConfiguration="Soap57ProviderBinding" contract="ServiceReference1.Soap57ProviderPortType"
-          name="Soap57ProviderPort" />
+      <endpoint address="http://www.smswang.net:7801/sms" binding="basicHttpBinding" bindingConfiguration="Soap57ProviderBinding" contract="ServiceReference1.Soap57ProviderPortType" name="Soap57ProviderPort" />
     </client>
   </system.serviceModel>
 </configuration>
