--- a/OpenAuth.WebApi/Web.config
+++ b/OpenAuth.WebApi/Web.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <!--
   有关如何配置 ASP.NET 应用程序的详细信息，请访问
   http://go.microsoft.com/fwlink/?LinkId=301879
@@ -10,7 +10,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   
     <sectionGroup name="enyim.com">
-      <section name="memcached" type="Enyim.Caching.Configuration.MemcachedClientSection, Enyim.Caching"/>
+      <section name="memcached" type="Enyim.Caching.Configuration.MemcachedClientSection, Enyim.Caching" />
     </sectionGroup>
   </configSections>
   
@@ -22,7 +22,7 @@
   <enyim.com>
     <memcached protocol="Binary">
       <servers>
-        <add address="127.0.0.1" port="11211"/>
+        <add address="127.0.0.1" port="11211" />
       </servers>
     </memcached>
   </enyim.com>
@@ -58,6 +58,17 @@
       <remove name="TRACEVerbHandler" />
       <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
     </handlers>
+        <defaultDocument>
+            <files>
+                <clear />
+                <add value="index.htm" />
+                <add value="index.html" />
+                <add value="Default.htm" />
+                <add value="Default.asp" />
+                <add value="iisstart.htm" />
+                <add value="default.aspx" />
+            </files>
+        </defaultDocument>
   </system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
